--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+    implementation 'com.github.everseat:TextViewLabel:0.1'
 }
